# public_suffix

./: README.md  download_public_suffix_list.py  dump_public_suffix_trie.py  public_suffix.py  pyproject.toml  requirements.txt  setup.py
public_suffix/: __init__.py  cli.py
public_suffix/structures/: domain_properties.py  public_suffix_list_trie.py  public_suffix_list_trie_node.py
public_suffix/trie/: __init__.py
