[project]
name = "public_suffix"
version = "0.41"
dependencies = []

[project.optional-dependencies]
cli = [
    'typed_argument_parser @ git+https://github.com/vphpersson/typed_argument_parser.git#egg=typed_argument_parser',
    'string_utils_py @ git+https://github.com/vphpersson/string_utils_py.git#egg=string_utils_py',
    'public_suffix[download]'
]

download = [
    'httpx'
]